fix: VoteResultDetails converter